# dm-spark-tpcxbb

./: .gitignore  .pre-commit-config.yaml  README.md  hw07.ipynb  pyproject.toml
TPCx-BB-dataset/customer.ptxt/: .part-00000-656cc004-d806-4385-8811-0a148f41f4d0-c000.snappy.parquet.crc  .part-00001-656cc004-d806-4385-8811-0a148f41f4d0-c000.snappy.parquet.crc  part-00000-656cc004-d806-4385-8811-0a148f41f4d0-c000.snappy.parquet  part-00001-656cc004-d806-4385-8811-0a148f41f4d0-c000.snappy.parquet
TPCx-BB-dataset/customer_address.ptxt/: .part-00000-f9c3f816-fe16-4e78-8841-5c3845ae91b5-c000.snappy.parquet.crc  .part-00001-f9c3f816-fe16-4e78-8841-5c3845ae91b5-c000.snappy.parquet.crc  part-00000-f9c3f816-fe16-4e78-8841-5c3845ae91b5-c000.snappy.parquet  part-00001-f9c3f816-fe16-4e78-8841-5c3845ae91b5-c000.snappy.parquet
TPCx-BB-dataset/customer_demographics.ptxt/: .part-00000-f7a6595e-a79f-4d59-b2c6-7ef3ba4b6081-c000.snappy.parquet.crc  .part-00001-f7a6595e-a79f-4d59-b2c6-7ef3ba4b6081-c000.snappy.parquet.crc  .part-00002-f7a6595e-a79f-4d59-b2c6-7ef3ba4b6081-c000.snappy.parquet.crc  part-00002-f7a6595e-a79f-4d59-b2c6-7ef3ba4b6081-c000.snappy.parquet
queries/: queryParameters.sql
queries/q00/: q00.sql  run.sh
spark_table_schemas/: customer.schema  customer_address.schema  customer_demographics.schema  date_dim.schema  household_demographics.schema  income_band.schema  inventory.schema  item.schema  item_marketprices.schema  product_reviews.schema  promotion.schema  reason.schema  ship_mode.schema  store.schema  store_returns.schema  store_sales.schema  time_dim.schema  warehouse.schema  web_clickstreams.schema  web_page.schema  web_returns.schema  web_sales.schema  web_site.schema
(+192 files in other folders)
