[tool.poetry]
name = "assignment-07-spark"
version = "0.1.0"
description = "Spark homework assignment of the Data Management course at USI Università della Svizzera italiana"
authors = ["Jeferson Morales Mariciano <jeferson.morales.mariciano@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
jupyterlab = "^4.2.0"
notebook = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = {version = "^24.4.2", extras = ["jupyter"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
